--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,13 @@ notifications:
 matrix:
   include:
   - os: linux
-    compiler: gcc
     before_install:
     - docker pull wtfbbqhax/tremulous:v3
-    - docker run -v $(pwd):/usr/src wtfbbqhax/tremulous:v3 ./misc/docker-build.sh
+    - docker run -e PLATFORM=linux -v $(pwd):/usr/src wtfbbqhax/tremulous:v3 ./misc/docker-build.sh
+  - os: linux
+    before_install:
+    - docker pull wtfbbqhax/tremulous:v3
+    - docker run -e PLATFORM=mingw32 -v $(pwd):/usr/src wtfbbqhax/tremulous:v3 ./misc/docker-build.sh
   - os: osx
     osx_image: xcode8
     compiler: clang
