--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ matrix:
   - os: osx
     osx_image: xcode8
     compiler: clang
-    env: USE_FREETYPE=1 ARCH=x86_64
+    env: ARCH=x86_64
     before_install:
     - brew update
     - brew install freetype --universal
